<resources>
    <string name="app_name">开源代码</string>
    <string name="call_str">拨打电话</string>
    <string name="call_dial_str">跳转至拨号界面</string>
    <string name="call_send_sms">发送短信</string>
    <string name="wake_up_and_unlock_str">唤醒屏幕并解锁</string>
    <string name="is_application_background_str">判断当前App处于前台还是后台状态</string>
    <string name="is_sleeping_str">判断当前手机是否处于锁屏(睡眠)状态</string>
    <string name="is_online_str">判断当前是否有网络连接</string>
    <string name="is_wifi_connected_str">判断当前是否是WIFI连接状态</string>
    <string name="install_apk_str">安装APK</string>
    <string name="is_phone_str">判断当前设备是否为手机</string>
    <string name="get_device_str">获取当前设备宽高，单位px</string>
    <string name="get_device_imei">获取IMEI</string>
    <string name="get_mac_address">获取当前设备的MAC地址</string>
    <string name="get_app_version">获取当前程序的版本号</string>
    <string name="collect_device_info_str">收集设备信息，用于信息统计分析</string>
    <string name="have_sdcard">是否有SD卡</string>
    <string name="hide_soft_input">动态隐藏软键盘</string>
    <string name="et_hide_soft_input">动态隐藏软键盘</string>
    <string name="show_soft_input">动态显示软键盘</string>
    <string name="toggle_soft_input">动态显示或者是隐藏软键盘</string>
    <string name="go_home">主动回到Home，后台运行</string>
    <string name="get_statusbar_height">获取状态栏高度</string>
    <string name="get_top_bar_height">获取状态栏高度＋标题栏(ActionBar)高度</string>
    <string name="get_network_operator">获取MCC+MNC代码 (SIM卡运营商国家代码和运营商网络代码)</string>
    <string name="get_network_operator_name">返回移动网络运营商的名字</string>
    <string name="get_phone_type">返回移动终端类型</string>
    <string name="get_network_class">判断手机连接的网络类型(2G,3G,4G)</string>
    <string name="get_network_status">判断当前手机的网络类型(WIFI还是2,3,4G)</string>
    <string name="encrypt_str">加密</string>
    <string name="decode_str">解密</string>
    <string name="nothing_str">加密前</string>
    <string name="click_me">点我啦！</string>
    <string name="get_result">获取结果</string>
    <string name="click_me_camera">拍照</string>
    <string name="screen_shot_str">截图</string>
    <string name="start_vibrator">开始震动</string>
    <string name="qr_error">生成二维码失败</string>
    <string name="install_apk">安装</string>
    <string name="uninstall_apk">卸载</string>
    <string name="start_apk">启动</string>
    <string name="install_success">安装成功！</string>
    <string name="install_failed">安装失败！</string>
    <string name="uninstall_success">卸载成功！</string>
    <string name="uninstall_failed">卸载失败！</string>
    <string name="start_apk_success">启动App成功！</string>
    <string name="start_apk_failed">启动失败！</string>
    <string name="clear_data">清除本地缓存数据</string>
    <string name="clear_dataing">正在清除缓存数据……</string>
    <string name="file_name">请输入文件名称……</string>
    <string name="start_upload">开始上传</string>
    <string name="stop_upload">暂停上传</string>
    <string name="file_not_exist">文件不存在！</string>
    <string name="sdcard_not_exist">未检测到SD卡</string>
    <string name="tv_load_more">加载更多……</string>
    <string name="add_cart">添加购物车</string>

    <string name="detail_bottom_im_btn">联系卖家</string>
    <string name="detail_bottom_cart_btn">加入购物车</string>
    <string name="detail_bottom_buy_btn">立即购买</string>
    <string name="note_totaobao_btn">去淘宝</string>
    <string name="goods_detail">商品详情</string>
    <string name="shopping_cart_added">商品已成功添加到购物车！</string>
    <string name="shopping_cart_checkout">去结算</string>
    <string name="shopping_cart_continue">继续购物</string>
    <string name="et_input_hint">请输入内容……</string>
    <string name="upload_socket">提交数据到Socket服务器</string>
    <string name="print_log">打印log信息</string>
    <string name="span_test">这些课程是学习Android应用开发的绝佳资料。我们通过Github发起开源协作翻译的项目，完成中文版的输出，欢迎大家传阅学习！</string>
    <string name="start_valid_code">获取验证码</string>
</resources>
