<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_nothing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_str" />

    <Button
        android:id="@+id/btn_encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encrypt_str" />

    <Button
        android:id="@+id/btn_decode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decode_str" />
</LinearLayout>