<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/install_apk" />

    <Button
        android:id="@+id/btn_uninstall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uninstall_apk" />

    <Button
        android:id="@+id/btn_start_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_apk" />
</LinearLayout>