<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_name" />

    <TextView
        android:id="@+id/tv_show_result"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <ProgressBar
        android:id="@+id/pb_result"
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@drawable/divider_horizontal"
        android:dividerPadding="5dp"
        android:orientation="horizontal"
        android:showDividers="middle">


        <Button
            android:id="@+id/btn_start_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/start_upload" />

        <Button
            android:id="@+id/btn_stop_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/stop_upload" />

    </LinearLayout>
</LinearLayout>