<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280.0dip"
    android:layout_height="wrap_content"
    android:paddingBottom="20.0dip">

    <TextView
        android:id="@+id/cart_popup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="98.0dip"
        android:layout_marginTop="74.0dip"
        android:gravity="center"
        android:text="@string/shopping_cart_added"
        android:textSize="14.0sp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="31.0dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/cart_popup_text"
        android:layout_marginBottom="0.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginTop="30.0dip"
        android:gravity="center"
        android:paddingLeft="25.0dip"
        android:paddingRight="25.0dip"
        android:text="@string/shopping_cart_continue"
        android:textSize="14.0sp" />

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="wrap_content"
        android:layout_height="31.0dip"
        android:layout_alignParentRight="true"
        android:layout_below="@id/cart_popup_text"
        android:layout_marginBottom="0.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="30.0dip"
        android:gravity="center"
        android:paddingLeft="33.0dip"
        android:paddingRight="33.0dip"
        android:text="@string/shopping_cart_checkout"
        android:textSize="14.0sp" />

</RelativeLayout>